@@ -7,7 +7,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,6 +23,6 @@ public class WebtoonWriterService {
         return webtoonWriterRepository.findAllByWebtoonId(webtoonId)
                 .parallelStream()
                 .map(WebtoonWriter::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
